--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       <div class="alert alert-info text-center mt-1">Journal Analyzer</div>
       <form id="auto">
         <div class="form-group">
-          <label for="autotext">Generate Auto Entery</label>
+          <label for="autotext">Generate Auto Entry</label>
           <input type="text" id="query" class="form-control" />
         </div>
         <input type="submit" value="Generate" class="btn btn-primary" />
