--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       <form id="auto">
         <div class="form-group">
           <label for="autotext">Generate Auto Entry</label>
-          <input type="text" id="query" class="form-control" />
+          <input type="text" required id="query" class="form-control" />
         </div>
         <input
           type="submit"
