--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,12 @@
       </form>
       <br />
     </div>
-    
+    <div>
+      <p class="text-muted text-center">
+        Note: This app is in Development stage. Crashes and slow outputs are
+        expected.
+      </p>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
